--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,14 +1,13 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
+*,
 *::after,
 *::before {
+  margin: 0;
   box-sizing: inherit;
+  padding: 0;
 }
 html {
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 
 body {
