--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@
 @import "abstracts/mixins";
 @import "abstracts/variables";
 
-// @import componets folder
+// @import components folder
 
 // @import bass folder
 @import "base/animations";
