add new function in sass and add package tailwind css and some note for help you to run projects also fix some bugs :)

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -61,3 +61,13 @@ big-desktop
     }
   }
 }
+
+// new mixni custom
+@mixin breakpoint($breakpoint) {
+  $max-width: $breakpoint;
+
+  @media only screen and (max-width: $max-width) {
+    // breakpoint styles
+    @content;
+  }
+}
