--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,9 @@
 //? @import
+// import tailwindcss
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 // @import abstracts folder
 @import "abstracts/functions";
 @import "abstracts/mixins";
